--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -368,7 +368,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_03_nodata.html" target="_blank">SUB_03혼재기교통상황예측_03Use-case_결과없음</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth2">
@@ -385,7 +385,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_04_sim_nodata.html" target="_blank">SUB_03혼재기교통상황예측_04Simulation_결과없음</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
