--- a/src/forecast_04_sim.html
+++ b/src/forecast_04_sim.html
@@ -7,7 +7,7 @@
 		<section class="map_screen_wrap">
 			<div class="map_screen_title_row">
 				<div class="map_screen_title_main_cols">
-					<h2 class="map_screen_title">Use-case 관리</h2>
+					<h2 class="map_screen_title">Simulation 목록 관리</h2>
 					<div class="map_screen_title_sub">
 						혼재기 교통상황 예측
 					</div>
